[tool.poetry]
name = "refyre"
version = "0.0.1.5.5"
description = "Filesystem dominance is all you need."
authors = ["Ansh <teamnebulaco@gmail.com>"]
readme = "README.md"
repository = "https://github.com/flockfysh/refyre"
license = "MIT"
keywords = ["files", "manipulation", "data science", ]
packages = [
    { include = "refyre",  from = "." },
]
classifiers =[
            "Programming Language :: Python :: 3",
            "Operating System :: OS Independent",
            "License :: OSI Approved :: MIT License",
]
include = [
    "LICENSE.md",
]

[tool.poetry.dependencies]
python = ">=3.8"
tqdm = ">=4.64.0"
requests = ">=2.29.0"
pandas = ">=2.0.0"
gitpython = ">=3.1.30"

[tool.poetry.dev-dependencies]
pytest = {version="^7.0.1", python = ">=3.7,<4.0"}
pillow = ">=9.4.0"

[tool.poetry.scripts]
refyre = "refyre.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
