[tool.poetry]
name = "refyre"
version = "0.0.1.5"
description = "Filesystem dominance is all you need."
authors = ["Ansh <eye.am.ansh@gmail.com>"]
readme = "README.md"
repository = "https://github.com/flockfysh/refyre"
license = "MIT"
keywords = ["files", "manipulation", "data science", ]
packages = [
    { include = "refyre",  from = "." },
]
classifiers =[
            "Programming Language :: Python :: 3",
            "Operating System :: OS Independent",
            "License :: OSI Approved :: MIT License",
]
include = [
    "LICENSE.md",
]

[tool.poetry.dependencies]
python = ">=3.8"
tqdm = ">=4.64.0"

[tool.poetry.dev-dependencies]
pytest = {version="^7.0.1", python = ">=3.7,<4.0"}
pillow = ">=9.4.0"

[tool.poetry.scripts]
refyre = "refyre.cli:main"

[tool.poetry.group.pandas]
optional = true

[tool.poetry.group.pandas.dependencies]
pandas = ">=2.0.0"

[tool.poetry.group.git]
optional = true

[tool.poetry.group.git.dependencies]
gitpython = ">=3.1.30"

[tool.poetry.group.web]
optional = true

[tool.poetry.group.web.dependencies]
requests = ">=2.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
