[tool.poetry]
name = "refyre"
version = "0.0.1.5.9"
description = "Filesystem dominance is all you need."
authors = ["Ansh <eye.am.ansh@gmail.com>"]
readme = "README.md"
repository = "https://github.com/flockfysh/refyre"
license = "MIT"
keywords = ["files", "manipulation", "data science", ]
packages = [
    { include = "refyre",  from = "." },
]
classifiers =[
            "Programming Language :: Python :: 3",
            "Operating System :: OS Independent",
            "License :: OSI Approved :: MIT License",
]
include = [
    "LICENSE.md",
]

[tool.poetry.dependencies]
python = ">=3.8"
requests = { version = ">=2.29.0" , optional = true }
pandas = { version = ">=2.0.0" , optional = true }
gitpython = { version = ">=3.1.30" , optional = true }

[tool.poetry.dev-dependencies]
pytest = {version="^7.0.1", python = ">=3.7,<4.0"}
pillow = ">=9.4.0"

[tool.poetry.scripts]
refyre = "refyre.cli:main"

[tool.poetry.extras]
web = ["requests"]
git = ["gitpython"]
pandas = ["pandas"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
