[metadata]
name = refyre
version = 0.0.1
author = AnshKetchum
author_email = eye.am.ansh@gmail.com
description = Filesystem dominance is all you need.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://flockfysh.tech/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True